# rawzip

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: analysis.R  rawzip-benchmark-data.csv
bench/: Cargo.toml
bench/src/: bench.rs
compare/: Cargo.toml
compare/benches/: bench.rs
compare/src/: main.rs
examples/: big.rs  cli.rs  extract.rs  list.rs  read.rs  write.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_zip.rs
src/: archive.rs  crc.rs  errors.rs  lib.rs  locator.rs  mode.rs  path.rs  reader_at.rs  time.rs  utils.rs  writer.rs
tests/it/: concatenated_zip_tests.rs  main.rs  modification_time_tests.rs  permission_tests.rs  utf8_tests.rs  zip64_tests.rs
