[package]
name = "rawzip"
version = "0.3.1"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2021"
description = "A Zip archive reader and writer"
repository = "https://github.com/nickbabcock/rawzip"
readme = "README.md"
license = "MIT"
keywords = ["zip", "archive"]
categories = ["filesystem", "compression", "parser-implementations"]
include = ["src/**/*.rs"]
rust-version = "1.70"

[dependencies]

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
filetime = "0.2"
flate2 = { version = "1.0.35" }
jiff = { version = "0.2.15", default-features = false }
log = "0.4"
paste = "1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rstest = "0.24.0"
zstd = "0.13.3"
