[package]
publish = false
name = "rawzip-bench"
version = "0.0.1"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
description = "Criterion benchmark suite for rawzip."
homepage = "https://github.com/nickbabcock/rawzip/tree/master/bench"
repository = "https://github.com/nickbabcock/rawzip"
license = "MIT"
edition = "2021"

[workspace]

[lib]
bench = false

[[bench]]
name = "rawzip-bench"
harness = false
path = "src/bench.rs"

[dependencies]
criterion = "0.6.0"
rawzip = { path = ".." }

[profile.release]
debug = true

[profile.bench]
debug = true
