[package]
name = "compare"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async_zip = { version = "0.0.17", features = ["tokio", "tokio-fs", "deflate"] }
rawzip = { path = ".." }
rc-zip-sync = "4.2.4"
tokio = { version = "1.43.0", features = ["fs", "rt", "rt-multi-thread"] }
tokio-util = "0.7.13"
zip = { version = "=2.1.3" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
