[package]
name = "compare"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async_zip = { version = "0.0.17", features = ["tokio", "tokio-fs", "deflate"] }
criterion = { version = "0.6", features = ["async_tokio", "csv_output"] }
rawzip = { path = ".." }
rc-zip = "5.3.1"
rc-zip-sync = "4.3.0"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread"] }
tokio-util = "0.7.13"
zip = { version = "4.2.0" }

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
